# chat-factory

./: .dockerignore  .gitignore  CHANGES.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  architecture_proposal.md  config.py  debug_file_operations.py  format_data.py  generate_wrapper.py  main.py  metrics.py  plan_for_nationwide.txt  post_processing_add_company_entities.py  pyproject.toml  run.sh  run_company_tagging.py  run_company_tagging_gemini2_mock.py  run_company_tagging_mock.py  run_financial_advisory.py  run_financial_advisory_gemini2.py  run_financial_advisory_gemini2_mock.py  run_financial_advisory_mock.py  run_fixed_main.py  run_voc_gemini2.py  setup.py  setup_credentials.py  standalone_generator.py  taxonomy.json  taxonomy_old.json  temp_130k_stats_log.txt  validate_data.py
chat_factory/: README.md  __init__.py  generator.py  main.py
configs/: company_tagging.py  company_tagging_gemini2.py  config.py  financial_advisory.py  financial_advisory_gemini2.py  financial_advisory_mock.py  voc_gemini2.py
docs/: company_integration_guide.md  company_tagging.md  company_tagging_implementation.md  company_tagging_implementation_status.md  datetime_distribution.md  docker_setup.md  docker_troubleshooting.md  gemini_2_integration.md  gemini_2_setup.md  use_cases.md
few_shot_examples/: Deal negotiations.txt  Earnings reports discussions.txt  Market updates.txt  News on specific companies.txt  Stock analysis.txt  Trade discussions.txt  company_tagging.txt  deal_negotiations.txt  earnings_reports_discussions.txt  market_updates.txt  news_on_specific_companies.txt  (+2 more)
(+187 files in other folders)
