[tool.poetry]
name = "chat-factory"
version = "0.1.0"
description = ""
authors = ["Sean Koval <sean.koval@symphony.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-cloud-aiplatform = "^1.66.0"
scipy = "1.13.1"
pandas = "^2.2.2"
pydantic = "^2.9.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
